Fixed Layout
Fixed a layout issue where the layout of the main element would break given certain proportions by assigning a 'min-height' attribute to individual items.

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,10 +195,6 @@ div li {
   width: 100%;
   margin: 0 auto;
 }
-.nav {
-  width: 80%;
-  margin: 0 auto;
-}
 
 .header-text {
   float: left;
@@ -224,12 +220,12 @@ div li {
   }
 
   .main-img {
-    width: 300px;
+    width: 330px;
   }
 
 .content {
   display: inline-block;
-  width: 90%;
+  width: 100%;
   padding: 20px 0;
 }
 
@@ -239,10 +235,10 @@ div li {
 .block-four,
 .block-five,
 .block-six {
-    float: left;
+  float: left;
   width: 50%;
   padding: 1em;
-margin: 0 auto;
+
 }
 
 .left-footer {
@@ -309,20 +305,21 @@ header li {
     font-size: 1.45em;
   }
 
+  .main-img {
+    width: 285px;
+  }
+
   .block-one,
   .block-two,
   .block-three,
   .block-four,
   .block-five,
   .block-six {
-      float: left;
-    width: 33%;
-    padding: 1em;
-  margin: 0 auto;
+        width: 33%;
+      min-height: 381px;
+    padding: 10px;
   }
 
-  .main-img {
-    width: 265px;
-  }
+
 
 }
